--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -7,6 +7,14 @@
 #define CINT_VERSION            "@cint_VERSION@"
 #define CINT_SOVERSION          @cint_SOVERSION@
 
+#ifdef _MSC_VER
+#include <complex.h>
+typedef _Dcomplex cint_complex;
+#else
+#include <complex.h>
+typedef double complex cint_complex;
+#endif
+
 #cmakedefine I8
 #ifdef I8
 #include <stdint.h>
@@ -280,12 +288,12 @@ void cint2e_optimizer(CINTOpt **opt, FINT *atm, FINT natm,
 #ifndef __cplusplus
 #include <complex.h>
 
-void CINTc2s_ket_spinor_sf1(double complex *gspa, double complex *gspb, double *gcart,
+void CINTc2s_ket_spinor_sf1(cint_complex *gspa, cint_complex *gspb, double *gcart,
                             FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
-void CINTc2s_iket_spinor_sf1(double complex *gspa, double complex *gspb, double *gcart,
+void CINTc2s_iket_spinor_sf1(cint_complex *gspa, cint_complex *gspb, double *gcart,
                              FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
-void CINTc2s_ket_spinor_si1(double complex *gspa, double complex *gspb, double *gcart,
+void CINTc2s_ket_spinor_si1(cint_complex *gspa, cint_complex *gspb, double *gcart,
                             FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
-void CINTc2s_iket_spinor_si1(double complex *gspa, double complex *gspb, double *gcart,
+void CINTc2s_iket_spinor_si1(cint_complex *gspa, cint_complex *gspb, double *gcart,
                              FINT lds, FINT ldc, FINT nctr, FINT l, FINT kappa);
 #endif
